--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -38,8 +38,9 @@
     <%=f.label :content, "3. Main part of article" %>
     <%=f.text_area :content, class: "form-control", rows: "10"%>
   </div>
+  <div class="submit-button" style="font-family:century;">
     <%= f.submit 'Ready to Post', class: "btn btn-outline-secondary btn-lg" %>
     <% end %>
-  
+  </div>
 </div>
 
