--- a/app/views/likes/_like_button.html.erb
+++ b/app/views/likes/_like_button.html.erb
@@ -1,11 +1,11 @@
 
 <%if current_user.liking?(post)%>
   <%= link_to like_path(post_id: post.id, id: post.id), method: :delete, remote: true do %>
-  <i class="fas fa-thumbs-up"></i>unlike
+  <i class="fas fa-thumbs-up fa-lg"></i>  unlike
   <% end %>
 <% else %>
   <%= link_to likes_path(post_id: post.id), method: :post, remote: true do%>
-  <i class="fas fa-thumbs-up"></i>like
+  <i class="fas fa-thumbs-up fa-lg"></i>  like
   <% end %>
 <% end %>
 
