--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,12 @@
 
+ <section style="float left"> 
+      <% if current_user == @post.user %>
+      <%= link_to "Delete Post", @post, method: :delete, data: { confirm: "You sure?" }, class: "btn btn-secondary"%>
+      <%= link_to "Edit Post", edit_post_path(@post.id), class: "btn btn-secondary" %>
+      <% end %>
+      
+</section>
+
   <section="post-show-image">
   <%=render "post_image250", post: @post%>
 </section>
@@ -9,17 +17,17 @@
 
   <div class="article-wrapper">
     <div class="post-title">
-        <h5>category:<%=@post.category%></h5>
+        <h5>Category:<%=@post.category%></h5>
            <div style="display:flex;">
            <h3 class="mb-0">Title: <%=@post.title%> </h3> 
            <p class="pl-3"><a href=<%user_path(@post.user)%>> / Written by <%=@post.user.name%></a></p>
            </div>          
         <span class="text-muted">posted at <%= @post.created_at %></span>
-     </div>
+    </div>
   <div class="post-content">
     <p class="article-inside"><%=@post.content%></p>
-  </div>
-</div>
+   </div>
+ </div>
   <div class="col-10">
      <h4 class="text-left title">Comments here...</h4>
     <div id="comments_area"> <%= render 'comments/comment_list', comments: @comments %> </div>
